[package]
name = "sc-rpc-spec"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
log = "0.4.17"
thiserror = "1.0"
serde_json = "1.0.85"

# Chain Spec internal structures.
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" }
